[package]
name = "deno_package_json"
description = "package.json implementation for the Deno CLI"
version = "0.4.1"
edition = "2021"
authors = ["the Deno authors"]
license = "MIT"
repository = "https://github.com/denoland/deno_package_json"

[features]
sync = []

[dependencies]
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.85"
url = { version = "2.5.1" }
thiserror = "2"
deno_semver = "0.7.0"
deno_path_util = "0.3.0"
deno_error = { version = "0.5.2", features = ["serde", "serde_json"] }
boxed_error = "0.2.3"
sys_traits = "0.1.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
